log
Wed, May 14, 2025  8:53:23 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:59:20: error: invalid initializer
   int sudo[9][9] = n->sudo;
                    ^
3f0e54c
Wed, May 14, 2025  8:54:22 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:59:21: error: invalid initializer
   int sudok[9][9] = n->sudo;
                     ^
e6fd1e8
Wed, May 14, 2025  8:55:46 AM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
a5ce086
Wed, May 14, 2025  9:19:39 AM: 
 sudoku.c | 44 ++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 44 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:84:18: error: 'nodo' undeclared (first use in this function)
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
sudoku.c:84:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:83:9: error: variable 'j' set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:82:9: error: variable 'i' set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:93:7: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
   if (is_final(n) == 0)
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
12bb22d
Wed, May 14, 2025  9:24:37 AM: 
 sudoku.c | 26 ++++++++------------------
 1 file changed, 8 insertions(+), 18 deletions(-)
 tests:  1|4
total_score: 10/70
88fb089
Wed, May 14, 2025  9:26:15 AM: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 30/70
8599f37
Sat, May 17, 2025  5:51:11 PM: 
 sudoku.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:88:24: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     for (int j = 0 ; j , 9 ; j++) {
                        ^
cc1.exe: all warnings being treated as errors
a2cca63
Sat, May 17, 2025  5:51:37 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
9b0054a
Sat, May 17, 2025  5:56:05 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
3594303
Sat, May 17, 2025  6:00:28 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
00ec2cc
Sat, May 17, 2025  6:14:33 PM: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:131:11: error: passing argument 1 of 'clean' from incompatible pointer type [-Werror=incompatible-pointer-types]
     clean(n);
           ^
In file included from test.c:4:0:
list.h:13:6: note: expected 'List * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void clean(List* list);
      ^~~~~
cc1.exe: all warnings being treated as errors
7bb89ea
Sat, May 17, 2025  6:15:08 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
856cf65
Sat, May 17, 2025  6:33:02 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
8bcbdba
Sat, May 17, 2025  6:41:03 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
bc72985
Sat, May 17, 2025  6:42:13 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
063bc02
Sat, May 17, 2025  6:47:08 PM: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
59d91bd
Sat, May 17, 2025  6:49:24 PM: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
790ac10
Sat, May 17, 2025  6:53:43 PM: 
 sudoku.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  10|0
total_score: 70/70
1be3887
